# opendisplay-compression-benchmark

./: .gitignore  README.md
codec_benchmark/: .gitignore  CMakeLists.txt  Makefile  README.md
codec_benchmark/fixtures/: sample-1bpp.16x16.bs-1bppstreams  sample-2bpp.16x16.bs-1bppstreams  sample-2bpp.16x16.bs-od  sample-4bpp.16x16.bs-1bppstreams  sample-4bpp.16x16.bs-od
codec_benchmark/src/: fixture_generator.cpp  g5_codec.h  g5_f128.cpp  g5_f256.cpp  g5_f64.cpp  g5_wrapper_impl.inl  main.cpp
results/run-20260508-035515/: commands.tsv  metadata.jsonl  metadata.txt  summary.csv
results/run-20260508-full/: commands.tsv  metadata.jsonl
results/run-20260508-zlib-small-window/: commands.tsv  compression.jsonl  metadata.jsonl  summary.csv
tools/: run_benchmark.py  summarize_results.py
tools/bitstream-converter/: README.md  convert_pngs.py
tools/source-generator/: Program.cs  SourceGenerator.csproj
tools/stress-generator/: Program.cs
